--- a/app.component.html
+++ b/app.component.html
@@ -2,7 +2,7 @@
   <div class="drag-sample-wrapper">
     <div class="schedule-container">
       <div class="title-container">
-        <h1 class="title-text">Doctor's Appointments</h1>
+        <h1 class="title-text">Rig Scheduling</h1>
       </div>
       <ejs-schedule
         #scheduleObj
@@ -12,7 +12,7 @@
         [group]="group"
         [selectedDate]="selectedDate"
         [workHours]="workHours"
-        [monthsCount]="48"
+        [monthsCount]="60"
         [eventSettings]="eventSettings"
         (actionBegin)="onActionBegin($event)"
         (drag)="onItemDrag($event)"
