--- a/app.component.html
+++ b/app.component.html
@@ -40,6 +40,7 @@
           ></e-view>
         </e-views>
         <e-header-rows>
+        <e-header-row option="Year"> </e-header-row>
           <e-header-row option="Month"> </e-header-row>
         </e-header-rows>
       </ejs-schedule>
